--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "submodule/sources/elFinder"]
 	path = submodule/sources/elFinder
-	url = https://github.com/Studio-42/elFinder.git
+	url = git@github.com:aihimel/elFinder.git
