--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "build:elfinder": "./tools/build_elfinder.sh",
     "build:copy": "node tools/build_copy.js",
     "build:zip": "node tools/zip_build.js",
-    "build:prod": "npm run build:elfinder && npm run build:copy && npm run build:zip"
+    "build:prod": "npm run build:elfinder && npm run sass:build && npm run build:copy && npm run build:zip"
   },
   "dependencies": {
     "clean-css-cli": "^5.5.2",
