refactor: owner info

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "submodule/sources/elFinder"]
 	path = submodule/sources/elFinder
-	url = git@github.com:aihimel/elFinder.git
+	url = git@github.com:Bit-Apps-Pro/elFinder.git
