wip: controller added

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -35,8 +35,13 @@
   "typescript.tsdk": "node_modules\\typescript\\lib",
   "css.lint.validProperties": ["composes"],
   "cSpell.words": [
+    "colwidth",
     "elfinder",
+    "getfile",
     "mkfile",
+    "netmount",
+    "netunmount",
+    "quicklook",
     "Squiz",
     "zipdl"
   ],
