chore: distignore updated

--- a/.distignore
+++ b/.distignore
@@ -1,13 +1,19 @@
-svn-assets
+.vscode
 build
 node_modules
 sass
 submodule
+svn-assets
+testing
 tools
-package-lock.json
-yarn.lock
 .gitignore
 .gitmodules
+.php-cs-fixer.cache
+.php-cs-fixer.php
+composer.json
+composer.lock
 package.json
+phpcs.xml
+package-lock.json
+yarn.lock
 pnpm-lock.yaml
-testing
