--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "file-manager",
   "version": "5.0.2",
-  "description": "Manage your file the way you like. You can upload, delete, copy, move, rename, compress, extract files. You don't need to worry about ftp. It is realy simple and easy to use.",
-  "author": "Aftabul Islam",
+  "description": "Manage your file the way you like. You can upload, delete, copy, move, rename, compress, extract files. You don't need to worry about ftp. It is really simple and easy to use.",
+  "author": "Bit Apps",
   "license": "GPL-3.0-or-later",
   "scripts": {
     "sass:compile": "node-sass sass/style.sass -o ./assets/css --output-style expanded --source-map true",
@@ -14,7 +14,8 @@
     "build:copy": "node tools/build_copy.js",
     "build:zip": "node tools/zip_build.js",
     "build:theme": "./tools/copy_themes.js",
-    "build:prod": "npm run build:elfinder && npm run sass:build && npm run build:copy && npm run build:zip && npm run build:theme"
+    "build:prod": "npm run build:elfinder && npm run sass:build  && npm run build:theme && npm run build:copy && npm run build:zip",
+    "production": "composer i --no-dev && npm run build:prod"
   },
   "dependencies": {
     "clean-css-cli": "^5.5.2",
