--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -50,5 +50,6 @@
   },
   "[php]": {
     "editor.defaultFormatter": "junstyle.php-cs-fixer"
-  }
+  },
+  "workbench.panel.defaultLocation": "right"
 }
