WIP: refactoring [frontend]
- Settings page

--- a/composer.json
+++ b/composer.json
@@ -59,7 +59,8 @@
       "delete_vendor_packages": true,
       "delete_vendor_files": true,
       "copy_static_files": [],
-      "delete_static_files": []
+      "delete_static_files": [],
+      "include_modified_date" : false
     }
   }
 }
