--- a/package.json
+++ b/package.json
@@ -37,11 +37,15 @@
     "lucide-react": "^0.292.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-focus-bounder": "^1.1.6",
     "react-router-dom": "^6.18.0"
   },
   "devDependencies": {
     "@emotion/babel-plugin": "^11.11.0",
     "@rollup/plugin-commonjs": "^25.0.7",
+    "@storybook/react": "^7.6.17",
+    "@testing-library/react": "^14.2.1",
+    "@tippyjs/react": "^4.2.6",
     "@trivago/prettier-plugin-sort-imports": "^4.3.0",
     "@types/css-modules": "^1.0.5",
     "@types/loadable__component": "^5.13.7",
@@ -90,6 +94,7 @@
     "vite-plugin-babel": "^1.1.3",
     "vite-plugin-pwa": "^0.16.7",
     "vite-plugin-static-copy": "^1.0.0",
+    "vitest": "^1.3.1",
     "zip-local": "^0.3.5"
   }
 }
