--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "build:prod": "pnpm production  && pnpm build:copy && pnpm build:zip",
     "i18n:parse-js": "npx react-gettext-parser --output ./locale.pot --config ./gettext-parser.config.js  './frontend/src/**/{*.ts,*.tsx}'",
     "i18n:json": "npx po2json locale.pot ./languages/file-manager-file-manager-MODULE-main.json -f jed1.x",
-    "i18n:php": "[ ! -d \"languages/\" ] && mkdir languages/;wp i18n make-pot ./backend languages/file-manager.pot --include=*.php --skip-js --slug=file-manager --headers='{\"Last-Translator\":\"\",\"Language-Team\":\"support@bitapps.pro\",\"PO-Revision-Date\":\"\",\"Report-Msgid-Bugs-To\":\"\"}'",
+    "i18n:php": "[ ! -d \"languages/\" ] && mkdir languages/;node ./tools/pot-to-php.mjs locale.pot languages/generatedString.php file-manager;wp i18n make-pot ./backend languages/file-manager.pot --include=*.php --skip-js --slug=file-manager --headers='{\"Last-Translator\":\"\",\"Language-Team\":\"support@bitapps.pro\",\"PO-Revision-Date\":\"\",\"Report-Msgid-Bugs-To\":\"\"}'",
     "i18n": "pnpm i18n:parse-js && pnpm i18n:php",
     "dev": "vite",
     "build": "tsc && vite build",
@@ -77,6 +77,8 @@
     "eslint-scope": "^7.2.2",
     "eslint-utils": "^3.0.0",
     "eslint-visitor-keys": "^3.4.3",
+    "gettext-parser": "^8.0.0",
+    "lodash": "^4.17.21",
     "node-sass": "^7.0.1",
     "onchange": "^7.1.0",
     "postcss-csso": "^6.0.1",
