--- a/composer.json
+++ b/composer.json
@@ -4,63 +4,30 @@
   "license": "gpl-2",
   "autoload": {
     "psr-4": {
-      "BitApps\\FM\\": "./backend/app",
-      "BitApps\\FM\\Tools\\ComposerScripts\\": "./tools/composer-scripts/"
-    },
-    "classmap": [
-      "./dependencies"
-    ]
+      "BitApps\\FM\\": "./backend/app"
+    }
   },
   "scripts": {
     "lint": "./vendor/bin/php-cs-fixer fix --config=.php-cs-fixer.php",
     "unused:variable": "phpcs -p --standard=VariableAnalysis backend",
-    "compat": "./vendor/bin/phpcs -p ./backend --standard=PHPCompatibilityWP --runtime-set testVersion 5.6-",
-    "strauss": [
-      "vendor/bin/strauss"
-    ],
-    "pre-install-cmd": [
-      "BitApps\\FM\\Tools\\ComposerScripts\\NamespaceUpdater::preInstall"
-    ],
-    "pre-update-cmd": [
-      "BitApps\\FM\\Tools\\ComposerScripts\\NamespaceUpdater::preUpdate"
-    ],
-    "post-install-cmd": [
-      "BitApps\\FM\\Tools\\ComposerScripts\\NamespaceUpdater::postInstall"
-    ],
-    "post-update-cmd": [
-      "BitApps\\FM\\Tools\\ComposerScripts\\NamespaceUpdater::postUpdate"
-    ]
+    "compat": "./vendor/bin/phpcs -p ./backend --standard=PHPCompatibilityWP --runtime-set testVersion 5.6-"
   },
   "require-dev": {
     "friendsofphp/php-cs-fixer": "^3.10",
     "sirbrillig/phpcs-variable-analysis": "*",
     "dealerdirect/phpcodesniffer-composer-installer": "^0.7",
-    "phpcompatibility/phpcompatibility-wp": "*",
-    "brianhenryie/strauss": "^0.14.1"
+    "phpcompatibility/phpcompatibility-wp": "*"
   },
   "config": {
     "allow-plugins": {
-      "dealerdirect/phpcodesniffer-composer-installer": true
+      "dealerdirect/phpcodesniffer-composer-installer": true,
+      "automattic/jetpack-autoloader": true
     }
   },
   "require": {
     "bitapps/wp-validator": "^1.0.4",
     "bitapps/wp-kit": "^1.1",
-    "bitapps/wp-database": "^1.0"
-  },
-  "extra": {
-    "strauss": {
-      "target_directory": "dependencies",
-      "namespace_prefix": "BitApps\\FM\\Dependencies\\",
-      "classmap_prefix": "BitApps_FM_",
-      "constant_prefix": "BitApps_FM_",
-      "include_author": false,
-      "classmap_output": false,
-      "delete_vendor_packages": true,
-      "delete_vendor_files": true,
-      "copy_static_files": [],
-      "delete_static_files": [],
-      "include_modified_date": false
-    }
+    "bitapps/wp-database": "^1.1",
+    "automattic/jetpack-autoloader": "^3.0"
   }
 }
