chore: distignore updated

--- a/.distignore
+++ b/.distignore
@@ -1,19 +1,34 @@
-.vscode
 build
+composer.lock
+elFinder
+.eslintignore
+.eslintrc.js
+frontend
+gettext-parser.config.js
+.gitignore
+.gitmodules
+locale.pot
 node_modules
+.npmrc
+.nvmrc
+package.json*
+.php-cs-fixer.cache
+.php-cs-fixer.php
+phpcs.xml
+package-lock.json
+yarn.lock
+pnpm-lock.yaml
+.prettierignore
+.prettierrc
+readme.txt*
+.stylelintignore
+.stylelintrc.json
 sass
 submodule
 svn-assets
 testing
 tools
-.gitignore
-.gitmodules
-.php-cs-fixer.cache
-.php-cs-fixer.php
-composer.json
-composer.lock
-package.json
-phpcs.xml
-package-lock.json
-yarn.lock
-pnpm-lock.yaml
+tsconfig.json
+tsconfig.node.json
+vite.config.mts
+.vscode
