--- a/package.json
+++ b/package.json
@@ -24,78 +24,80 @@
     "pre-commit": "lefthook run pre-commit"
   },
   "dependencies": {
-    "@ant-design/cssinjs": "^1.17.2",
-    "@ant-design/icons": "^5.2.6",
-    "@emotion/react": "^11.11.1",
-    "@loadable/component": "^5.15.3",
-    "@tanstack/react-query": "^4.35.3",
-    "@tanstack/react-query-devtools": "^4.35.3",
-    "antd": "^5.11.1",
-    "framer-motion": "^10.16.4",
-    "jotai": "^2.5.1",
+    "@ant-design/cssinjs": "^1.21.1",
+    "@ant-design/icons": "^5.5.1",
+    "@emotion/react": "^11.13.3",
+    "@loadable/component": "^5.16.4",
+    "@tanstack/react-query": "^4.36.1",
+    "@tanstack/react-query-devtools": "^4.36.1",
+    "antd": "^5.21.2",
+    "canvas-confetti": "^1.9.3",
+    "framer-motion": "^10.18.0",
+    "jotai": "^2.10.0",
     "lucide-react": "^0.292.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-focus-bounder": "^1.1.6",
-    "react-router-dom": "^6.18.0"
+    "react-router-dom": "^6.26.2"
   },
   "devDependencies": {
-    "@emotion/babel-plugin": "^11.11.0",
-    "@rollup/plugin-commonjs": "^25.0.7",
-    "@storybook/react": "^7.6.17",
-    "@testing-library/react": "^14.2.1",
+    "@emotion/babel-plugin": "^11.12.0",
+    "@rollup/plugin-commonjs": "^25.0.8",
+    "@storybook/react": "^7.6.20",
+    "@testing-library/react": "^14.3.1",
     "@tippyjs/react": "^4.2.6",
     "@trivago/prettier-plugin-sort-imports": "^4.3.0",
+    "@types/canvas-confetti": "^1.6.4",
     "@types/css-modules": "^1.0.5",
-    "@types/loadable__component": "^5.13.7",
-    "@types/react": "^18.2.37",
-    "@types/react-dom": "^18.2.15",
-    "@typescript-eslint/eslint-plugin": "^6.10.0",
-    "@typescript-eslint/parser": "^6.10.0",
-    "@vitejs/plugin-react": "^4.1.1",
-    "clean-css-cli": "^5.5.2",
-    "concurrently": "^7.0.0",
-    "detect-port": "^1.5.1",
-    "eslint": "^8.53.0",
+    "@types/loadable__component": "^5.13.9",
+    "@types/react": "^18.3.10",
+    "@types/react-dom": "^18.3.0",
+    "@typescript-eslint/eslint-plugin": "^6.21.0",
+    "@typescript-eslint/parser": "^6.21.0",
+    "@vitejs/plugin-react": "^4.3.2",
+    "clean-css-cli": "^5.6.3",
+    "concurrently": "^7.6.0",
+    "detect-port": "^1.6.1",
+    "eslint": "^8.57.1",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-airbnb-typescript": "^17.1.0",
-    "eslint-config-prettier": "^9.0.0",
+    "eslint-config-prettier": "^9.1.0",
     "eslint-import-resolver-node": "^0.3.9",
-    "eslint-import-resolver-typescript": "^3.6.1",
-    "eslint-module-utils": "^2.8.0",
+    "eslint-import-resolver-typescript": "^3.6.3",
+    "eslint-module-utils": "^2.12.0",
     "eslint-plugin-babel": "^5.3.1",
-    "eslint-plugin-cypress": "^2.15.1",
-    "eslint-plugin-import": "^2.29.0",
+    "eslint-plugin-cypress": "^2.15.2",
+    "eslint-plugin-import": "^2.30.0",
     "eslint-plugin-json": "^3.1.0",
-    "eslint-plugin-jsx-a11y": "^6.8.0",
+    "eslint-plugin-jsx-a11y": "^6.10.0",
     "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-prettier": "^5.0.1",
-    "eslint-plugin-promise": "^6.1.1",
-    "eslint-plugin-react": "^7.33.2",
-    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-prettier": "^5.2.1",
+    "eslint-plugin-promise": "^6.6.0",
+    "eslint-plugin-react": "^7.37.0",
+    "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-scope": "^7.2.2",
     "eslint-utils": "^3.0.0",
     "eslint-visitor-keys": "^3.4.3",
     "gettext-parser": "^8.0.0",
     "lodash": "^4.17.21",
-    "node-sass": "^7.0.1",
+    "node-sass": "^7.0.3",
     "onchange": "^7.1.0",
     "postcss-csso": "^6.0.1",
-    "prettier": "^3.0.3",
+    "prettier": "^3.3.3",
     "react-router-dom": "^6.21.3",
     "recursive-copy": "^2.0.14",
     "stylelint": "^15.11.0",
-    "stylelint-config-css-modules": "^4.3.0",
+    "stylelint-config-css-modules": "^4.4.0",
     "stylelint-config-standard": "^34.0.0",
     "stylelint-config-standard-scss": "^11.1.0",
-    "typescript": "^5.2.2",
-    "typescript-plugin-css-modules": "^5.0.2",
-    "vite": "^4.5.0",
-    "vite-plugin-babel": "^1.1.3",
+    "typescript": "^5.6.2",
+    "typescript-plugin-css-modules": "^5.1.0",
+    "vite": "^4.5.5",
+    "vite-plugin-babel": "^1.2.0",
     "vite-plugin-pwa": "^0.16.7",
-    "vite-plugin-static-copy": "^1.0.0",
-    "vitest": "^1.3.1",
+    "vite-plugin-static-copy": "^1.0.6",
+    "vitest": "^1.6.0",
     "zip-local": "^0.3.5"
   },
   "packageManager": "pnpm@9.1.4",
