--- a/package.json
+++ b/package.json
@@ -41,6 +41,8 @@
     "react-router-dom": "^6.26.2"
   },
   "devDependencies": {
+    "@commitlint/cli": "^20.1.0",
+    "@commitlint/config-conventional": "^20.0.0",
     "@emotion/babel-plugin": "^11.12.0",
     "@rollup/plugin-commonjs": "^25.0.8",
     "@storybook/react": "^7.6.20",
@@ -80,6 +82,7 @@
     "eslint-utils": "^3.0.0",
     "eslint-visitor-keys": "^3.4.3",
     "gettext-parser": "^8.0.0",
+    "lefthook": "^2.0.2",
     "lodash": "^4.17.21",
     "onchange": "^7.1.0",
     "postcss-csso": "^6.0.1",
