--- a/.github/workflows/test-all.yml
+++ b/.github/workflows/test-all.yml
@@ -47,6 +47,7 @@ jobs:
       - uses: actions/cache@v4
         name: Setup package cache
         with:
+          save-always: true
           path: |
             ${{ steps.pnpm-cache.outputs.dir }}
             ${{ steps.composer-cache.outputs.dir }}
