Chore: plugin check gh action

--- a/.distignore
+++ b/.distignore
@@ -32,3 +32,7 @@ tsconfig.node.json
 vite.config.mts
 .vscode
 vendor/typisttech
+libs/elFinder/php/.tmp/.htaccess
+libs/elFinder/files/.trash/.gitignore
+libs/elFinder/files/.gitignore
+.github
