chore: execlude libs from plugin check

--- a/.github/workflows/plugin-check.yml
+++ b/.github/workflows/plugin-check.yml
@@ -71,6 +71,7 @@ jobs:
           exclude-directories: |
             vendor
             node_modules
+            libs
           categories: |
             general
             security
